# MemGPT

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  project.json  pyproject.toml
.github/workflows/: alembic-validation.yml  code_style_checks.yml  core-integration-tests.yml  core-lint.yml  core-unit-sqlite-test.yaml  core-unit-test.yml  docker-integration-tests.yaml  fern-check.yml  fern-docs-preview.yml  fern-docs-publish.yml  fern-sdk-python-preview.yml  fern-sdk-python-publish.yml  fern-sdk-typescript-preview.yml  fern-sdk-typescript-publish.yml  lint-command.yml  migration-test.yml  model-sweep.yaml  notify-on-update.yaml  poetry-publish-nightly.yml  poetry-publish.yml  reusable-test-workflow.yml  send-message-integration-tests.yaml  send-message-integration-tests.yml  test-lmstudio.yml  test-ollama.yml  test-vllm.yml  warn_poetry_updates.yml
alembic/versions/: 068588268b02_add_vector_db_provider_to_archives_table.py  18ff61fbc034_add_agent_id_index_to_mapping_tables.py  220856bbf43b_add_read_only_column.py  54c76f7cabca_add_tags_to_passages_and_create_passage_.py  5b804970e6a0_add_hidden_property_to_groups_and_blocks.py  5d27a719b24d_add_organization_id_to_jobs_model.py  750dd87faa12_add_build_request_latency_to_step_.py  7f7933666957_add_stop_reason_to_jobs_table.py  887a4367b560_convert_stop_reason_from_enum_to_string.py  88f9432739a9_add_jobtype_to_job_table.py  b888f21b151f_add_vector_db_provider_to_source.py  bdddd421ec41_add_privileged_tools_to_organization.py  c41c87205254_add_default_requires_approval_field_on_.py  d06594144ef3_add_and_migrate_encrypted_columns_for_.py  d5103ee17ed5_add_template_fields_to_blocks_agents_.py  ddb69be34a72_add_vector_db_namespace_fields_to_.py  e20573fe9b86_add_tool_types.py  e991d2e3b428_add_monotonically_increasing_ids_to_.py  eff256d296cb_mcp_encrypted_data_migration.py  f3bf00ef6118_add_approval_fields_to_message_model.py
examples/docs/: example.py
examples/files/: main.py
examples/notebooks/: Agentic RAG with Letta.ipynb
examples/sleeptime/: sleeptime_source_example.py
examples/streaming/: README.md  package-lock.json  package.json  streaming_demo.py  streaming_demo.ts
fern/: docs.yml  fern.config.json  generators.yml  openapi-overrides.yml  openapi.json  package.json  project.json  tsconfig.json
fern/assets/: leaderboard.css  leaderboard.js  styles.css
fern/changelog/: 2025-01-28.mdx  2025-01-31.mdx  2025-02-05.mdx  2025-02-06.mdx  2025-02-10.mdx  2025-02-12.mdx  2025-02-19.mdx  2025-02-21.mdx  2025-02-23.mdx  2025-02-26.mdx  2025-02-27.mdx  2025-03-01.mdx  2025-03-02.mdx  2025-03-05.mdx  2025-03-06.mdx  2025-03-12.mdx  2025-03-13.mdx  2025-03-14.mdx  2025-03-15.mdx  2025-03-16.mdx  2025-03-17.mdx  2025-03-21.mdx  2025-03-24.mdx  2025-03-26.mdx  2025-04-02.mdx  2025-04-04.mdx  2025-04-05.mdx  2025-04-09.mdx  2025-04-10.mdx  2025-04-13.mdx  2025-04-14.mdx  2025-04-15.mdx  2025-04-16.mdx  2025-04-18.mdx
fern/examples/: agent_config.py  composio_tools.py  data_sources.py  memory.py  simple_multiagent.py  tool_rules.py
fern/pages/: community.mdx  concepts.mdx  cookbooks.mdx  cookbooks_simple.mdx  index.mdx  install.mdx  introduction.mdx  leaderboard.mdx  letta_memgpt.mdx
fern/python-reference/: AgentState.mdx  Block.mdx  DataConnector.mdx  DirectoryConnector.mdx  Document.mdx  EmbeddingConfig.mdx  Job.mdx  LLMConfig.mdx  LettaMessage.mdx  LettaResponse.mdx  LettaUsageStatistics.mdx  Memory.mdx  Message.mdx  Passage.mdx  Tool.mdx  User.mdx
fern/scripts/: prepare-openapi.ts
fern/template-pages/: authentication.mdx  faqs.mdx  home.mdx  introduction.mdx  overview.mdx  quickstart.mdx
letta/: __init__.py  agent.py  constants.py  errors.py  interface.py  settings.py  streaming_interface.py  streaming_utils.py  system.py  utils.py
letta/adapters/: letta_llm_adapter.py  letta_llm_request_adapter.py  letta_llm_stream_adapter.py
letta/agents/: agent_loop.py  base_agent.py  base_agent_v2.py  helpers.py  letta_agent.py  letta_agent_v2.py  voice_agent.py
letta/client/: streaming.py
letta/data_sources/: redis_client.py
letta/functions/: helpers.py  schema_generator.py  schema_validator.py  types.py
letta/groups/: sleeptime_multi_agent_v2.py  sleeptime_multi_agent_v3.py
letta/helpers/: converters.py  crypto_utils.py  datetime_helpers.py  message_helper.py  pinecone_utils.py  tool_execution_helper.py  tool_rule_solver.py  tpuf_client.py
letta/interfaces/: anthropic_streaming_interface.py  openai_streaming_interface.py
letta/llm_api/: anthropic_client.py  azure_client.py  bedrock_client.py  deepseek_client.py  google_vertex_client.py  groq_client.py  helpers.py  llm_api_tools.py  llm_client.py  llm_client_base.py  mistral.py  openai.py  openai_client.py  together_client.py  xai_client.py
letta/local_llm/: chat_completion_proxy.py
letta/orm/: __init__.py  agent.py  archive.py  block.py  block_history.py  blocks_agents.py  group.py  identity.py  job.py  step.py  (+15 more)
memgpt/: constants.py  memory.py
tests/: conftest.py  integration_test_agent_tool_graph.py  integration_test_async_tool_sandbox.py  integration_test_batch_api_cron_jobs.py  integration_test_builtin_tools.py  integration_test_chat_completions.py  integration_test_human_in_the_loop.py  integration_test_modal_sandbox_v2.py  integration_test_pinecone_tool.py  integration_test_send_message.py  integration_test_sleeptime_agent.py  integration_test_summarizer.py  integration_test_tool_execution_sandbox.py  integration_test_turbopuffer.py  integration_test_voice_agent.py  mcp_test.py  pytest.ini  test_agent_serialization.py  test_agent_serialization_v2.py  test_cli.py  test_client.py  test_crypto_utils.py  test_embeddings.py  test_file_processor.py  test_google_embeddings.py  test_letta_agent_batch.py  test_long_running_agents.py  test_managers.py  test_mcp_encryption.py  test_memory.py  test_multi_agent.py  test_plugins.py  test_provider_trace.py  test_providers.py  test_redis_client.py  test_schema_validator.py  test_sdk_client.py  test_secret.py  test_server.py  test_sonnet_nonnative_reasoning_buffering.py  (+6 more)
(+307 files in other folders)
